# icoco-coupling

./: README.md
ICoCo2FMI/: Check_run.sh  ICoCo2FMI.sh  README.md  build_FMUComplianceChecker.sh
ICoCo2FMI/share/: Check_run.sh  build_FMUComplianceChecker.sh
ICoCo2FMI/src/: CMakeLists.txt  ICoCoFMI.cpp  fmuTemplatebis.c  fmuTemplatebis.h  generate_files_from_json.py  generate_writeDataFile.py
ProblemTest/: CMakeLists.txt  ProblemTest.cxx  ProblemTest.hxx  README.md  in.csv  in_step.csv  makefile  superv.cpp  superv.py  test_daccosim.dng  vars.json  vars_step.json
swig/: your_code.i
